--- a/zjl/sinamail/css/sinamail.css
+++ b/zjl/sinamail/css/sinamail.css
@@ -98,7 +98,8 @@ body{background-color: rgb(167, 205, 241);overflow-x: hidden;overflow-y: hidden;
 
 .kong{width: 125px;height: 24px;float: left;}
 #label span{float: left;width: 125px;height: 24px;display: block;border:1px solid gray;border-top: 0;border-bottom: 0;border-top-right-radius: 3px;border-top-left-radius: 3px;background-image: url("images/bg_tablist.png");background-position: 0 -26px;background-repeat: repeat-x;}
-#label a{position: absolute;left: 127px;top:1px;z-index: 8;font-weight: bold;float: left;width: 125px;height: 26px;display: block;border-top:1px solid gray;border-right:1px solid gray;border-left: 0;border-top-right-radius: 3px;border-top-left-radius: 3px;background-color: #fff;background-position: 0 -26px;background-repeat: repeat-x;}
+#label a{background-color: #fff;position: absolute;left: 127px;top:1px;z-index: 8;font-weight: bold;float: left;width: 125px;height: 26px;display: block;border-top:1px solid gray;border-right:1px solid gray;border-left: 0;border-top-right-radius: 3px;border-top-left-radius: 3px;background-position: 0 -26px;background-repeat: repeat-x;}
+.receive{}
 .labeltxt{display: block;float: left;height: auto;width: auto;color: rgb(50, 71, 92);cursor: default;display: inline;font-family: Verdana, 宋体, Helvetica, sans-serif;font-size: 12px;height: auto;line-height: 22px;padding-left: 7px;}
 .close{background-image: url("images/sg_picskin.gif");background-position: -135px -60px;background-repeat: no-repeat;color: rgb(24, 67, 130);cursor: auto;display: block;height: 8px;width: 8px;float: right;margin-right:5px;margin-top:8px;}
 #conrin{height: 596px;width: 1190px;overflow-x: hidden;overflow-y: hidden;background-color: rgb(255, 255, 255);border-left:1px solid rgb(142, 179, 214);color: #000;display: block;font-family: Verdana, 宋体, Helvetica, sans-serif;font-size: 12px;line-height: 16px;margin-top: -2px;}
@@ -107,6 +108,9 @@ body{background-color: rgb(167, 205, 241);overflow-x: hidden;overflow-y: hidden;
 #conrintop2{color: rgb(24, 67, 130);float: right;font-family: Verdana, 宋体, Helvetica, sans-serif;font-size: 12px;height: 16px;width: 133px;line-height: 16px;margin: 0px 7px 0px 0px;padding: 10px 0px 6px 0px;}
 #conrintop2 span a:hover{text-decoration: underline;}
 .fenlan{background-image: url("images/sg_icon_17.gif");background-position: 0px -200px;background-repeat: no-repeat;cursor: auto;display: inline-block;float: right;height: 18px;width: 18px;line-height: 16px;}
+
+#conrins{display: none;height: 596px;width: 1190px;overflow-x: hidden;overflow-y: hidden;background-color: rgb(255, 255, 255);border-left:1px solid rgb(142, 179, 214);color: #000;font-family: Verdana, 宋体, Helvetica, sans-serif;font-size: 12px;line-height: 16px;margin-top: -2px;}
+.rubbish{float: left;width: 125px;height: 24px;display: block;border:1px solid gray;border-top: 0;border-bottom: 0;border-top-right-radius: 3px;border-top-left-radius: 3px;background-image: url("images/bg_tablist.png");background-position: 0 -26px;background-repeat: repeat-x;}
 
 #span1{height: auto;width: auto;position: relative;z-index: 10;float: left;}
 .checkbox{position: relative;width: 45px;height: 24px;display: block;float: left;background-attachment: scroll;border-collapse: collapse;background-image: url("images/bitbtn.png");background-repeat: repeat-x;border-right: 1 solid  #97b7d7;border-bottom: 1 solid  #97b7d7;border-radius: 3px;}
@@ -148,6 +152,8 @@ p{cursor: pointer;display: block;font-family: 宋体;font-size: 12px;height: 16p
 
 /*邮件*/
 #conrinbottom{position: relative;z-index: 0;width: 1190px;height: 512px;overflow-y:auto;}
+#conrinbottoms{position: relative;z-index: 0;width: 1190px;height: 512px;overflow-y:auto;}
+
 .title1{border-bottom: 2px solid rgb(247, 247, 247);color: rgb(0, 0, 0);display: block;font-family: 宋体;font-size: 12px;height: 20px;line-height: 20px;padding-left: 10px;width: 1163px;}
 .title1 strong{font-weight: bold;margin-left: 4px;}
 .title1 em{font-style: normal;}
